RESOLVED FIXED205585
[LFC][IFC] Fix LayoutTests/imported/w3c/web-platform-tests/css/css-text/letter-spacing/letter-spacing-control-chars-001.html
https://bugs.webkit.org/show_bug.cgi?id=205585
Summary [LFC][IFC] Fix LayoutTests/imported/w3c/web-platform-tests/css/css-text/lette...
alan
Reported 2019-12-24 20:33:43 PST
ssia
Attachments
Patch (2.43 KB, patch)
2019-12-24 20:42 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-12-24 20:34:06 PST
alan
Comment 2 2019-12-24 20:42:50 PST
WebKit Commit Bot
Comment 3 2019-12-25 04:07:13 PST
Comment on attachment 386397 [details] Patch Clearing flags on attachment: 386397 Committed r253905: <https://trac.webkit.org/changeset/253905>
WebKit Commit Bot
Comment 4 2019-12-25 04:07:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.