[LFC][IFC] Fix LayoutTests/imported/w3c/web-platform-tests/css/css-text/letter-spacing/letter-spacing-control-chars-001.html https://bugs.webkit.org/show_bug.cgi?id=205585 <rdar://problem/58188420>

Reviewed by Antti Koivisto.

TextUtil::fixedPitchWidth works on simple content only (letter-spacing forces slow font measuring path).

* layout/inlineformatting/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::width):


Canonical link: https://commits.webkit.org/218781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253905 268f45cc-cd09-0410-ab3c-d52691b4dbfc